// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders blog header 1`] = `
<section
  className="jsx-3469519543"
>
  <header
    className="jsx-3469519543"
  >
    <a
      aria-label=""
      className="jsx-3354872520"
      href="/"
    >
      <img
        alt="Amplience logo"
        className="jsx-2718936118 logo"
        src="/static/images/logo-white-100h.png"
        srcSet="/static/images/logo-white-50h.png 1x, /static/images/logo-white-100h.png 2x"
      />
    </a>
    <h1
      className="jsx-3469519543"
    >
      Blog Title
    </h1>
  </header>
</section>
`;

exports[`Header renders blog header with preview vse query string link 1`] = `
<section
  className="jsx-3469519543"
>
  <header
    className="jsx-3469519543"
  >
    <a
      aria-label=""
      className="jsx-3354872520"
      href="/?vse=test-vse.domain"
    >
      <img
        alt="Amplience logo"
        className="jsx-2718936118 logo"
        src="/static/images/logo-white-100h.png"
        srcSet="/static/images/logo-white-50h.png 1x, /static/images/logo-white-100h.png 2x"
      />
    </a>
    <h1
      className="jsx-3469519543"
    >
      Blog Title
    </h1>
  </header>
</section>
`;
